# spotifalc

./: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  redirect.html
src/pages/: NowPlaying.tsx
src/reducers/: currentlyPlayingSlice.ts
src/utils/: utils.tsx
src/utils/redux/: store.ts
