[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.5"
tokio = { version = "0.2", features = [ "full" ] }
rspotify = { version = "0.10.0", features = [ "blocking" ] }
dirs = "3.0.2"
time = "0.3.0-alpha-2"

  [dependencies.tauri]
  version = "1.0.0-beta"
features = ["api-all"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
