[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "you" ]
license = ""
repository = ""
default-run = "app"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.7.6"
tokio = { version = "1.29.1", features = [ "full" ] }
rspotify = { version = "0.12.0" }
dirs = "5.0.1"
time = "0.3.0-alpha-2"
log = "0.4.0"
env_logger = "0.10.0"
open = "5.0.0"

[dependencies.tauri]
  version = "1.4.1"
  features = ["api-all"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
